--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 <!-- carousel -->
 <div class="carousel carousel-slider center scrollspy" id="gallery">
   <div class="carousel-item center white-text">
-    <p class="white-text" style="z-index: 2;">Labuan bajo</p>
+    <p class="white-text" style="z-index: 2;">Benteng Nassau</p>
     <a class="" href="#one!"></a><img src="assets/img/p-1.jpg" style="width:75%;"></a>
     
   </div>
